--- a/blinks-api/package.json
+++ b/blinks-api/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node server.js",
+    "lint": "next lint",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
@@ -21,5 +22,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.3.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
